# DetTrkPosRec

./: CMakeLists.txt  README.md
include/svip/: svipAISDK_V31.h  svipAISDK_V36.h  svip_interface.h
src/: demo.cpp  demo_raw.cpp
src/ActRecognize/: ActRecognize.cpp
src/detect/: crop_util.cpp  detect.cpp  yololayer.cu
src/extract/: Extract.cpp
src/md5/: md5.cpp
src/pose_est/: PoseEst.cpp
src/svip/: svip_interface.cpp
src/track/: track.cpp  tracker.cpp
src/utils/: utils.cpp
